--- a/Linux/内网穿透.md
+++ b/Linux/内网穿透.md
@@ -1,1 +1,4 @@
 - [https://github.com/fatedier/frp/blob/dev/README_zh.md](https://github.com/fatedier/frp/blob/dev/README_zh.md)
+- Sakura Frp
+- https://github.com/ehang-io/nps
+- 
